2008-02-09  Frank Ch. Eigler  <fche@elastic.org>

	PR5750.
	From Eugeniy Meshcheryakov eugen@debian.org:
	* configure.ac (HAVE_LIBSQLITE3): Complete AC_DEFINE.
	
	* configure, INSTALL, missing, compile, depcomp, install-sh:
	autoreconf -fi'd.

2008-02-09  Frank Ch. Eigler  <fche@elastic.org>

	PR 5751.
	* configure.ac: Add -Werror to trial compilation with
	-fstack-protector-all, for hosts that don't quite support it.
	* configure: Regenerated.

2008-02-08  David Smith  <dsmith@redhat.com>

	PR 5650
	* systemtap.spec.in: Further simplification.

2008-02-07  Frank Ch. Eigler  <fche@elastic.org>

	* buildrun.cxx (run_make_cmd, compile_pass): Tweak kbuild
	parametrization to produce useful compile logs at -vv.

2008-02-04  David Smith  <dsmith@redhat.com>

	PR 4446 (partial)
	* tapsets.cxx
	(mark_var_expanding_copy_visitor::visit_target_symbol_arg): New
	function.
	(mark_var_expanding_copy_visitor::visit_target_symbol_format): New
	function.
	(mark_var_expanding_copy_visitor::visit_target_symbol): Handles
	"$arg" or "$format".
	(mark_derived_probe_group::emit_module_decls): Sets up "$format"
	data.
	
	PR 5650 (parital)
	* systemtap.spec.in: Moved %pre section to the systemtap-runtime
	rpm.

2008-01-30  David Smith  <dsmith@redhat.com>

	PR 5650
	* systemtap.spec.in: Simplified and explicitly specifies configure
	options.

2008-01-30  Dave Brolley  <brolley@redhat.com>

	* coveragedb.cxx (print_coverage_info): Fix typo: s.probes -> s.unused_probes
	where appropriate.
	(sql_update_unused_probes): Likewise.

2008-01-29  Frank Ch. Eigler  <fche@elastic.org>

	PR 5647
	* configure.ac (--enable-ssp): Make default on compilers that
	support it.
	* configure: Regenerated.

2008-01-28  David Smith  <dsmith@redhat.com>

	* configure.ac: Fixed a bug when "--disable-permon" was used.
	Added "--enable-crash" option.
	* configure: Regenerated.
	* Makefile.am: Improved staplog.so compile command.
	* Makefile.in: Regenerated.
