@@ -1,3 +1,11 @@
+2008-02-11  Jim Keniston  <jkenisto@us.ibm.com>
+
+	PR 5693
+	* runtime/uprobes/uprobes.c: Intercept handler-destined
+	signals received while we're single-stepping, and re-queue
+	them afterward.
+	* runtime/uprobes/uprobes.h: Ditto
+
 2008-02-09  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR5750.
